--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
+
+# production
+build
+
 /.pnp
 .pnp.js
 
 # testing
-/coverage
-
-# production
-/build
+coverage
 
 # misc
 .DS_Store
